// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Button renders the UI snapshot correctly 1`] = `
<fieldset
  className="css-1u8qly9"
  id="radio-group-column"
>
  <legend>
    column
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="column"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="column"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 2`] = `
<fieldset
  className="css-1u8qly9"
  id="radio-group-row"
>
  <legend>
    row
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1objuxj"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="row"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="row"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 3`] = `
<fieldset
  className="css-1u8qly9"
  id="radio-group-noLabel"
>
  <legend>
    no label
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label="no label"
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="noLabel"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="noLabel"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 4`] = `
<fieldset
  className="css-1u8qly9"
  id="radio-group-helperText"
>
  <legend>
    helperText
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="helperText"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="helperText"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
  <div
    className="css-0"
  >
    <div
      aria-atomic={true}
      aria-live="off"
      className="css-1xdhyk6"
      dangerouslySetInnerHTML={
        Object {
          "__html": "helper text",
        }
      }
      data-isinvalid={false}
      id="helperText-helperErrorText"
    />
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 5`] = `
<fieldset
  className="css-1u8qly9"
  id="radio-group-invalidText"
>
  <legend>
    invalidText
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="invalidText"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="invalidText"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 6`] = `
<fieldset
  className="css-1u8qly9"
  id="radio-group-optReq"
>
  <legend>
    no optional or required label
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="optReq"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="optReq"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 7`] = `
<fieldset
  className="css-1u8qly9"
  id="radio-group-required"
>
  <legend>
    required
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        aria-required={true}
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="required"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={true}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        aria-required={true}
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="required"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={true}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 8`] = `
<fieldset
  className="css-1u8qly9"
  id="radio-group-invalid"
>
  <legend>
    invalid
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
      data-invalid=""
    >
      <input
        aria-invalid={true}
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="invalid"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        data-invalid=""
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        data-invalid=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
      data-invalid=""
    >
      <input
        aria-invalid={true}
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="invalid"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        data-invalid=""
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        data-invalid=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 9`] = `
<fieldset
  className="css-1u8qly9"
  id="radio-group-disabled"
>
  <legend>
    disabled
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
      data-disabled=""
    >
      <input
        aria-disabled={true}
        checked={false}
        className="chakra-radio__input"
        disabled={true}
        id="radio-2"
        name="disabled"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        data-disabled=""
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        data-disabled=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
      data-disabled=""
    >
      <input
        aria-disabled={true}
        checked={false}
        className="chakra-radio__input"
        disabled={true}
        id="radio-3"
        name="disabled"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        data-disabled=""
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        data-disabled=""
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 10`] = `
<fieldset
  className="css-1y4kn3e"
  id="radio-group-chakra"
>
  <legend>
    chakra
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="chakra"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="chakra"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`Radio Button renders the UI snapshot correctly 11`] = `
<fieldset
  className="css-1u8qly9"
  data-testid="props"
  id="radio-group-props"
>
  <legend>
    props
    <div
      className="css-0"
    >
      Optional
    </div>
  </legend>
  <div
    aria-label={null}
    className="chakra-stack css-1wdv1uh"
    role="radiogroup"
  >
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-2"
        name="props"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="2"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 2
      </span>
    </label>
    <label
      className="chakra-radio css-13p0l12"
    >
      <input
        checked={false}
        className="chakra-radio__input"
        disabled={false}
        id="radio-3"
        name="props"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        required={false}
        style={
          Object {
            "border": "0px",
            "clip": "rect(0px, 0px, 0px, 0px)",
            "height": "1px",
            "margin": "-1px",
            "overflow": "hidden",
            "padding": "0px",
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": "1px",
          }
        }
        type="radio"
        value="3"
      />
      <span
        aria-hidden={true}
        className="css-14wybg9"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
      />
      <span
        className="chakra-radio__label css-1y8kf23"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        Radio 3
      </span>
    </label>
  </div>
</fieldset>
`;
